# MobileAppTCC

./: Comentarios Pedro TCC.txt
Arduino/ESPDisplayV3/: ESPDisplayV3.ino
Arduino/EspBancada/: EspBancada.ino
Arduino/EspBancadaV2/: EspBancadaV2.ino
Arduino/EspDisplay/: EspDisplay.ino  ui.c  ui.h  ui_InicialScreen.c  ui_InicialScreen.h  ui_ParametrosEspLocal.c  ui_ParametrosEspLocal.h  ui_ParametrosEspRemoto.c  ui_ParametrosEspRemoto.h  ui_ParametrosExperimento.c  ui_ParametrosExperimento.h  ui_SplashScreen.c  ui_SplashScreen.h  ui_telaAnimacao.c  ui_telaAnimacao.h  ui_telaAnimacaoLocal.c  ui_telaAnimacaoLocal.h
Arduino/EspDisplay - V2/EspDisplayV2/: EspDisplayV2.ino  ui.h  ui_ConexaoWifiEspCaseira.c  ui_ConexaoWifiEspCaseira.h  (+9 more)
UiEspDisplay/: espDisplayUi.sll  espDisplayUi.spj
UiEspDisplay - Copia/: espDisplayUi.sll  espDisplayUi.spj
UiEspDisplay - Copia/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ConexaoWifiEspEstudante.c  ui_ConexaoWifiEspEstudante.h  ui_Inicio.c  ui_ParametrosEspLocal.c  ui_ParametrosEspRemoto.c  ui_ParametrosEspRemoto.h  ui_ParametrosExperimento.c  ui_PrimeiraTela.c  ui_PrimeiraTela.h  ui_Reservatorios.c  ui_Reservatorios.h  ui_SplashScreen.h  ui_Sucesso.c  ui_comp_hook.c  ui_helpers.c
UiEspDisplay/UI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_ListaRedes.c  ui_ListaRedes.h  ui_ParametrosEspLocal.c  ui_ParametrosEspLocal.h  ui_ParametrosEspRemoto.c  ui_ParametrosExperimento.c  ui_ParametrosExperimento.h  ui_PrimeiraTela.h  ui_SplashScreen.c  ui_Sucesso.c  ui_Sucesso.h  ui_events.h  ui_img_atualizar_png.c  ui_img_logo_ufu_png.c
